--- a/index.html
+++ b/index.html
@@ -3,40 +3,9 @@
 <head>
 <title>ptsteadman</title>
 <style>
-h1 {
-  color: #A30000;
-}
-
-.menu a {
-  font-weight: bold;
-}
-
-li > a {
-  color: #00007A;
-}
-
-li > a:hover {
-  color: #A30000;
-}
-
-body {
-  font-family: arial;
-}
-
-.menu {
-  padding-left: 5px;
-}
-.menu li{
-  display: inline;
-  margin-right: 10px;
-}
-
-.container {
-  margin: 25px auto;
-  max-width: 36em;
-}
 </style>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
+<link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
