--- a/taipei/taipei-1.html
+++ b/taipei/taipei-1.html
@@ -2,18 +2,10 @@
 <html>
 <head>
 <title>Taipei New Life East Road</title>
-<style>
-body{
-    max-width: 740px;
-}
-
-img {
-    max-width: 740px;
-}
-
-</style>
+<link rel="stylesheet" href="../theme.css">
 </head>
 <body>
+<div class="container">
 <h1>Taipei New Life East Road</h1>
 <img src="img/eye.jpg">
 <p>The first time I went out to take pictures in Taipei, I tried to photograph a
@@ -128,5 +120,6 @@ most afraid of the embarassment of being an adult caught doing childish things.<
 </p>
 <img src="img/selfie.jpg">
 <br><br>
+</div>
 </body>
 </html>
