--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
   </ul>
   <p>A personal website is for vanity. </p> 
-  <img style="width: 100%;" src="images/pts.jpg">
+  <img src="images/pts.jpg">
   <h2>Programming</h2>
   <ul>
     <li><a target='_blank'  href='IMG_1772'>IMG_1772</a></li>
