--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
 <div class='container'>
   <h1>Patrick Steadman's Personal Website</h1>
   <ul class='menu'>
-    <li><a target='_blank' href='http://neoliberally.tumblr.com'>Personal Blog</a></li>
+    <li><a target='_blank' href='http://neoliberally.tumblr.com'>Tumblr</a></li>
     <li><a target='_blank' href='http://www.facebook.com/ptsteadman'>Facebook</a></li>
     <li><a target='_blank' href='http://github.com/ptsteadman'>Github</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
   </ul>
-  <p>A personal website is for vanity. </p> 
+  <p>This is my vanity website.</p> 
   <img src="images/pts.jpg">
   <h2>Programming</h2>
   <ul>
-    <li><a target='_blank'  href='IMG_1772'>IMG_1772</a></li>
-    <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a></li>
-    <li><a target='_blank'  href='http://ptsteadman.github.io'>Tech Notes</a></li>
-    <li><a href='nav.html'>Dynamics NAV eCommerce</a></li>
+    <li><a target='_blank'  href='IMG_1772'>IMG_1772</a> (2 stars)</li>
+    <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a> (4 stars)</li>
+    <li><a target='_blank'  href='http://ptsteadman.github.io'>Tech
+        Notes</a> (2 stars)</li>
+    <li><a href='nav.html'>Dynamics NAV eCommerce</a> (1 stars)</li>
   </ul>
   <h2>Writing</h2>
   <ul>
-    <li><a target='_blank' href='poetry.html'>Poetry</a></li>
-    <li><a target='_blank' href='https://s3-us-west-2.amazonaws.com/ptsteadman/lovepoem/lovepoem.html'>Love Poem (with Evan Hatch)</a></li>
+    <li><a target='_blank' href='poetry.html'>Poetry</a> (2 stars)</li>
+    <li><a target='_blank'
+        href='https://s3-us-west-2.amazonaws.com/ptsteadman/lovepoem/lovepoem.html'>Love
+        Poem (w/ E. Hatch)</a> (3 stars)</li>
   </ul>
   <p><i>&nbsp;Last Updated: January 2015</i></p>
 </div>
