--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </ul>
   <h2>Writing</h2>
   <ul>
+    <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a></li>
     <li><a target='_blank' href='poetry.html'>Poetry</a> (2 stars)</li>
     <li><a target='_blank'
         href='https://s3-us-west-2.amazonaws.com/ptsteadman/lovepoem/lovepoem.html'>Love
