--- a/taipei/index.html
+++ b/taipei/index.html
@@ -44,7 +44,8 @@ stopped at 2003, 2007, 2009.</p>
 <br><br>
 <img src="img/portrait2.jpg">
 <p>The number of family portraits left behind was striking.</p>
-<img src="img/art.jpg"> <p>I was hardly the only person to realize the fraught
+<img src="img/art2.jpg">
+<p>I was hardly the only person to realize the fraught
 nature of some of the buildings I visited.  I often stumbled on quite elaborate
 art projects and graffiti, the best of which I don't have pictures of: an old
 medical facility in which every room was a little art project.  It was a random
