--- a/taipei/index.html
+++ b/taipei/index.html
@@ -28,12 +28,11 @@ exploring these factories, theaters, hospitals, train stations, and offices.</p>
 own them.  In Taipei, there were a large number of vacant buildings, but most of
 them were only in limbo, in the process of being destroyed and redeveloped.
 </p>
-<p>There were many self-contained housing projects that were about to be
-demolished, and a challenge to get into.  These postwar structures had their own
-internal streets and breezeways, and seemed to reflect the more idealistic
-ambitions of the Republic of China in the early 60s.  The apartments were
-usually filled with whatever the families had left behind.  Wall calendars were
-stopped at 2003, 2007, 2009.</p>
+<p>I enjoyed climbing into self-contained housing projects that were about to be
+demolished.  These postwar structures had their own internal streets and
+breezeways, and seemed to reflect the more idealistic ambitions of the Republic
+of China in the early 60s.  The apartments were usually filled with whatever the
+families had left behind.  Wall calendars were stopped at 2003, 2007, 2009.</p>
 <!--<img src="img/alley.jpg">-->
 <img src="img/inside-alley.jpg">
 <!-- interior shot -->
@@ -43,13 +42,13 @@ stopped at 2003, 2007, 2009.</p>
 <img src="img/portrait1.jpg">
 <br><br>
 <img src="img/portrait2.jpg">
-<p>The number of family portraits left behind was striking.</p>
+<p>The family portraits left behind were striking.</p>
 <img src="img/art2.jpg">
-<p>I was hardly the only person to realize the fraught
-nature of some of the buildings I visited.  I often stumbled on quite elaborate
-art projects and graffiti, the best of which I don't have pictures of: an old
-medical facility in which every room was a little art project.  It was a random
-and delightful find, a credit to art college nearby.</p>
+<p>I was hardly the only person to realize the fraught nature of some of these
+buildings.  I often stumbled on quite elaborate art projects and graffiti, the
+best of which I don't have pictures of: an old medical facility in which every
+room was a little art project.  It was a random and delightful find, a credit to
+art college nearby.</p>
 <img src="img/grand-hotel.jpg">
 <br><br>
 <img src="img/me.jpg">
@@ -61,7 +60,7 @@ pronounciation with my doting host mother.  I think it was time well-spent,
 honestly.  </p>
 <img src="img/aaron.jpg">
 <p>Sometimes I'd explore with other exchange students.  One time, I convinced
-one of the French students to break away from the group with me to check out a
+one of the French students to break away from the group to check out a
 half-finished seaside resort.  What would have been a massive glass-enclosed
 lobby was only a skeleton of steel beams, allowing the sound of waves to fill
 the echoing space.  Other parts of the building were almost complete: some
@@ -76,19 +75,21 @@ student.</p>
 <img src="img/train-1.jpg">
 <br><br>
 <img src="img/train-2.jpg">
-<p>The process of college applications and admission did bad things for my
+<p>The process of writing college applications and being admitted harmed my
 mental health.  As my time in Taiwan drew to a close, my explorations became
 more compulsive and subterranean.</p>
 <img src="img/river-1.jpg">
 <br><br>
 <img src="img/river-2.jpg">
 <br><br>
+<img src="img/long.jpg">
+<br><br>
 <img src="img/map.png">
 <!-- map -->
-<p>My biggest project was exploring a network of drainage tunnels I found in a
-a "cultural park".  Exploring the tunnels, I realized that they led to a five mile long
-underground river that cut under the center of Taipei.  I planned to buy an
-inflatable kayak and the paddle the length of the river.</p>
+<p>My biggest project was exploring a network of drainage tunnels I found under
+a a "cultural park".  After some exploration, I realized that the tunnels led to
+a five mile long underground river that cut under the center of Taipei.  I
+planned to buy an inflatable kayak and the paddle the length of the river.</p>
 <img src="img/portal.jpg">
 <p>One of the more stressful aspects of this exploration was that the entrance
 to the tunnels was an access hatch in a busy public park.  Young couples often
