--- a/taipei/index.html
+++ b/taipei/index.html
@@ -7,7 +7,8 @@
 </head>
 <body class='taipei-teal'>
 <div class="captions">
-<h1>Taipei New Life Road</h1>
+<h1>Taipei New Life Road</h1> 
+<a style="top: 10px; right: 15px; position: absolute;" href="http://ptsteadman.com">Home</a>
 <img src="img/eye.jpg">
 <p>The first time I went out to take pictures in Taipei, I tried to photograph a
 woman with a disfigured eye who was selling flowers on the street.  This seemed
