--- a/taipei/index.html
+++ b/taipei/index.html
@@ -4,6 +4,9 @@
 <title>Taipei New Life Road</title>
 <link rel="stylesheet" href="../theme.css">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
+<meta name="description" content="Urban exploration of Taipei Xinsheng drainage and
+public housing.">
+<meta name="author" content="Patrick Steadman">
 </head>
 <body class='taipei-teal'>
 <div class="captions">
@@ -21,7 +24,7 @@ much of a ~pussy~ to photograph other people.</p>
 <img src="img/entry.jpg">
 <br><br>
 <img src="img/desks.jpg">
-<p>But the DSLR camera I had asked my grandparents for was exensive, so I took
+<p>But the DSLR camera I had asked my grandparents for was expensive, so I took
 pictures of other things.  Growing up in Buffalo, New York, I was surrounded by
 abandoned buildings, and some of my beautiful memories of high school involved
 exploring these factories, theaters, hospitals, train stations, and offices.</p>
@@ -98,11 +101,11 @@ were sitting in the grass around the hatch, taking pictures of their children.</
 <img src="img/scary.jpg">
 <br><br>
 <img src="img/hole.jpg">
-<p>This exploration was done alone.  I haven't looked at these pictures in
-almost five years, and I wonder if I'd still enjoy an exploration like this.
-Those are red cockroaches on the wall.  As an adult, if I really love
-drainage systems or factories, it is within my power to get a Masters of
-Engineering and work in these things for a living.</p>
+<p>I haven't looked at these pictures in almost five years, and I wonder if I'd
+still enjoy an exploration like this.  Would the red cockroaches covering the
+wall be more of a dealbreaker?   As an adult, if I really loved drainage systems
+or factories so much, I could get a Masters of Engineering and work in them for
+a living.</p>
 <img src="img/stranger.jpg">
 <p>One time, when I was walking down a narrow passageway, I
 realized there was another light coming towards me.  At first, I thought it
