--- a/taipei/index.html
+++ b/taipei/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Taipei New Life Road</title>
 <link rel="stylesheet" href="../theme.css">
+<link rel="img_src" href="img/aaron.jpg">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <meta name="description" content="Urban exploration of Taipei Xinsheng drainage and
 public housing.">
@@ -103,7 +104,7 @@ were sitting in the grass around the hatch, taking pictures of their children.</
 <img src="img/hole.jpg">
 <p>I haven't looked at these pictures in almost five years, and I wonder if I'd
 still enjoy an exploration like this.  Would the red cockroaches covering the
-wall be more of a dealbreaker?   As an adult, if I really loved drainage systems
+walls be more of a dealbreaker?   As an adult, if I really loved drainage systems
 or factories so much, I could get a Masters of Engineering and work in them for
 a living.</p>
 <img src="img/stranger.jpg">
