--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body class='fuxing'>
 <div class='container'>
-  <h1>Patrick Steadman's Personal Website</h1>
+    <h1><a href="/">Patrick Steadman's Personal Website</a></h1>
   <ul class='menu'>
     <li><a target='_blank' href='http://neoliberally.tumblr.com'>Tumblr</a></li>
     <li><a target='_blank' href='http://www.facebook.com/ptsteadman'>Facebook</a></li>
@@ -30,13 +30,14 @@
   </ul>
   <h2>Writing</h2>
   <ul>
-    <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a></li>
+    <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a> (3
+    stars)</li>
     <li><a target='_blank' href='poetry.html'>Poetry</a> (2 stars)</li>
     <li><a target='_blank'
         href='https://s3-us-west-2.amazonaws.com/ptsteadman/lovepoem/lovepoem.html'>Love
         Poem (w/ E. Hatch)</a> (3 stars)</li>
   </ul>
-  <p><i>&nbsp;Last Updated: January 2015</i></p>
+  <p><i>&nbsp;Last Updated: February 1st, 2015</i></p>
 </div>
 </body>
 <script>
