added meta tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <! DOCTYPE html>
 <html>
 <head>
-<title>ptsteadman</title>
+<title>Patrick Steadman's Personal Website</title>
 <style>
 </style>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
+<meta name='description' content="Website for Patrick Steadman's writing, programming, and game projects.">
+<link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
