changed love-poem location

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
     stars)</li>
     <li><a target='_blank' href='poetry.html'>Poetry</a> (2 stars)</li>
     <li><a target='_blank'
-        href='https://s3-us-west-2.amazonaws.com/ptsteadman/lovepoem/lovepoem.html'>Love
-        Poem (w/ E. Hatch)</a> (3 stars)</li>
+        href='love-poem'>Love Poem (w/ E. Hatch)</a> (3 stars)</li>
   </ul>
-  <p><i>&nbsp;Last Updated: February 1st, 2015</i></p>
+  <p><i>&nbsp;Last Updated: March 13th, 2015</i></p>
 </div>
 </body>
 <script>
