--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <img src="images/pts.jpg">
   <h2>Programming</h2>
   <ul>
+    <li><a target='_blank'  href='https://twitter.com/ptsteadman'>Twitter Feed of Everything I Google</a> (4 stars)</li>
     <li><a target='_blank'  href='IMG_1772'>IMG_1772</a> (2 stars)</li>
     <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a> (4 stars)</li>
     <li><a target='_blank'  href='http://ptsteadman.github.io'>Tech
@@ -38,7 +39,7 @@
     <li><a target='_blank'
         href='love-poem'>Love Poem (w/ E. Hatch)</a> (3 stars)</li>
   </ul>
-  <p><i>&nbsp;Last Updated: March 13th, 2015</i></p>
+  <p><i>&nbsp;Last Updated: April 29th, 2015</i></p>
 </div>
 </body>
 <script>
