improved taipei writing and added projects

--- a/taipei/index.html
+++ b/taipei/index.html
@@ -14,30 +14,29 @@ public housing.">
 <h1>Taipei New Life Road</h1> 
 <a style="top: 5px; right: 10px; position: absolute;" href="http://ptsteadman.com">Home</a>
 <img src="img/eye.jpg">
-<p>The first time I went out to take pictures in Taipei, I tried to photograph a
-woman with a disfigured eye who was selling flowers on the street.  This seemed
-like the kind of documentary photography I admired and wanted to produce.  The
-woman raised her hand to cover her face, and I knew instantly that I was too
-much of a ~pussy~ to photograph other people.</p>
+<p>The first time I went out to take pictures in Taipei, I tried to photograph
+a woman with a disfigured eye who was selling flowers on the street.  This
+seemed like the kind of documentary photography I wanted to produce
+with my new DSLR.  The woman raised her hand to cover her face, and I knew
+instantly that I was too much of a "pussy" to photograph other people.</p>
 <!-- interior shot -->
 <img src="img/tunnel.jpg">
 <br><br>
 <img src="img/entry.jpg">
 <br><br>
 <img src="img/desks.jpg">
-<p>But the DSLR camera I had asked my grandparents for was expensive, so I took
-pictures of other things.  Growing up in Buffalo, New York, I was surrounded by
-abandoned buildings, and some of my beautiful memories of high school involved
-exploring these factories, theaters, hospitals, train stations, and offices.</p>
-<p>In Buffalo, buildings were truly abandonded: no one owned them, or wanted to
-own them.  In Taipei, there were a large number of vacant buildings, but most of
-them were only in limbo, in the process of being destroyed and redeveloped.
-</p>
-<p>I enjoyed climbing into self-contained housing projects that were about to be
-demolished.  These postwar structures had their own internal streets and
-breezeways, and seemed to reflect the more idealistic ambitions of the Republic
-of China in the early 60s.  The apartments were usually filled with whatever the
-families had left behind.  Wall calendars were stopped at 2003, 2007, 2009.</p>
+<p>Growing up in Buffalo, New York, I was surrounded by abandoned buildings,
+and some of my beautiful memories of high school involved exploring these
+factories, theaters, hospitals, train stations, offices, etc.</p> <p>In Buffalo,
+buildings were truly abandonded: no one owned them, or wanted to own them.  In
+Taipei, there were a large number of vacant postwar buildings, but most of them were
+ in the process of being destroyed and redeveloped.
+</p> 
+<p>
+These buildings had their own internal streets and breezeways, and seemed to
+reflect the more idealistic ambitions of the Republic of China in the early
+60s.  The apartments were usually filled with whatever the families had left
+behind, and had wall calendars from 2003, 2007, and 2009.</p>
 <!--<img src="img/alley.jpg">-->
 <img src="img/inside-alley.jpg">
 <!-- interior shot -->
@@ -50,24 +49,22 @@ families had left behind.  Wall calendars were stopped at 2003, 2007, 2009.</p>
 <p>The family portraits left behind were striking.</p>
 <img src="img/art2.jpg">
 <p>I was hardly the only person to realize the fraught nature of some of these
-buildings.  I often stumbled on quite elaborate art projects and graffiti, the
-best of which I don't have pictures of: an old medical facility in which every
-room was a little art project.  It was a random and delightful find, a credit to
-art college nearby.</p>
+buildings.  I often stumbled on quite elaborate art projects and graffiti,
+especially near arts colleges.</p>
 <img src="img/grand-hotel.jpg">
 <br><br>
 <img src="img/me.jpg">
 <p>During the first half of my year as an exchange student in Taiwan, I sort of
 enjoyed the isolation that the language barrier provided.  My distate for
-mangaling the Chinese language gave me an excuse to simply spend most of my time
+mangling the Chinese language gave me an excuse to simply spend most of my time
 wandering alone, looking for "things", or going over vocabularly and
 pronounciation with my doting host mother.  I think it was time well-spent,
 honestly.  </p>
 <img src="img/aaron.jpg">
-<p>Sometimes I'd explore with other exchange students.  One time, I convinced
+<p>Sometimes I'd explore things with other exchange students.  One time, I convinced
 one of the French students to break away from the group to check out a
 half-finished seaside resort.  What would have been a massive glass-enclosed
-lobby was only a skeleton of steel beams, allowing the sound of waves to fill
+lobby was only steel beams, allowing the sound of waves to fill
 the echoing space.  Other parts of the building were almost complete: some
 bedrooms were decorated with plastic flowers; some doors and hallways opened to
 six story drops.  As we walked back along the beach, the French exchange student
@@ -80,9 +77,9 @@ student.</p>
 <img src="img/train-1.jpg">
 <br><br>
 <img src="img/train-2.jpg">
-<p>The process of writing college applications and being admitted harmed my
-mental health.  As my time in Taiwan drew to a close, my explorations became
-more compulsive and subterranean.</p>
+<p>The process of writing college applications harmed my mental health.  As my
+time in Taiwan drew to a close, my explorations became more compulsive and
+subterranean.</p>
 <img src="img/river-1.jpg">
 <br><br>
 <img src="img/river-2.jpg">
@@ -104,26 +101,25 @@ were sitting in the grass around the hatch, taking pictures of their children.</
 <img src="img/hole.jpg">
 <p>I haven't looked at these pictures in almost five years, and I wonder if I'd
 still enjoy an exploration like this.  Would the red cockroaches covering the
-walls be more of a dealbreaker?   As an adult, if I really loved drainage systems
-or factories so much, I could get a Masters of Engineering and work in them for
+walls be more of a dealbreaker?   As an adult, if I really love drainage systems
+or factories, I can get a Masters of Engineering and work in them for
 a living.</p>
 <img src="img/stranger.jpg">
 <p>One time, when I was walking down a narrow passageway, I
-realized there was another light coming towards me.  At first, I thought it
+realized there was another light coming towards me. I thought it
 might be own flashlight reflecting off something.  I turned my light off, and
 could see a person moving at the far end of the hallway.  I think he was
-shouting at me, but I couldn't tell what he was saying to the sound of water.</p>
+shouting at me, but I couldn't tell what he was saying due to the sound of water.</p>
 <p>I felt intense dread.  Was this the police, down here looking for me?  Had I made
 a terrible mistake?  What would my parents say?  No one knew I was down in the
 tunnels.</p>
 <p>Ending the standoff,  I turned around and quickly walked away. (But not
 before I took a picture.)</p>
 <img src="img/mcd.jpg">
-<p>I ate
-McDonalds after a successful exploration.  Living in Taiwan made me really
-appreciate McDonalds, where I could go even if drenched in drainage water, eat a
-Big Mac,  and listen to young Taiwanese businesspeople discuss their
-plans.</p>
+<p>After a successful exploration, I usually ate McDonalds.  Living in Taiwan
+made me really appreciate McDonalds, where I could go even if drenched in
+drainage water, eat a Big Mac, and listen to young Taiwanese businesspeople
+discuss their plans.</p>
 <p>I stopped doing these explorations a few years ago.  Why?   In Taiwan, and in
 Buffalo, I got caught a few times, but it was never a big deal. </p>
 
