--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <img src="images/pts.jpg">
   <h2>Programming</h2>
   <ul>
-    <li><a target='_blank'  href='https://twitter.com/ptsteadman'>Twitter Feed of Everything I Google</a> (4 stars)</li>
+    <li><a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a> (4 stars)</li>
+    <li><a target='_blank'  href='https://twitter.com/ptsteadman'>Twitter Feed of Everything I Google</a> (3 stars)</li>
     <li><a target='_blank'  href='IMG_1772'>IMG_1772</a> (2 stars)</li>
     <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a> (4 stars)</li>
     <li><a target='_blank'  href='http://ptsteadman.github.io'>Tech
@@ -32,13 +33,15 @@
   </ul>
   <h2>Writing</h2>
   <ul>
+    <li><a target='_blank' href='https://github.com/ptsteadman/college-memoir'>College Memoir</a> (?
+    stars)</li>
     <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a> (3
     stars)</li>
     <li><a target='_blank' href='poetry.html'>Poetry</a> (2 stars)</li>
     <li><a target='_blank'
         href='love-poem'>Love Poem (w/ E. Hatch)</a> (3 stars)</li>
   </ul>
-  <p><i>&nbsp;Last Updated: May 5th, 2015</i></p>
+  <p><i>&nbsp;Last Updated: May 30th, 2015</i></p>
 </div>
 </body>
 <script>
