--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<meta name="google-site-verification" content="YsaOseIWEetRshiuRQo_V1xNJrkW_f6a-4Syof4r1g0" />
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class='fuxing'>
 <div class='container'>
     <h1><a href="/">Patrick Steadman's Personal Website</a></h1>
   <ul class='menu'>
-    <li><a target='_blank' href='http://neoliberally.tumblr.com'>Tumblr</a></li>
+    <li><a target='_blank' href='http://twitter.com/ptsteadman'>Twitter</a></li>
     <li><a target='_blank' href='http://www.facebook.com/ptsteadman'>Facebook</a></li>
     <li><a target='_blank' href='http://github.com/ptsteadman'>Github</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
@@ -24,22 +25,22 @@
   <img src="images/pts.jpg">
   <h2>Programming</h2>
   <ul>
-    <li><a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a> (4 stars)</li>
-    <li><a target='_blank'  href='https://twitter.com/ptsteadman'>Twitter Feed of Everything I Google</a> (3 stars)</li>
-    <li><a target='_blank'  href='IMG_1772'>IMG_1772</a> (2 stars)</li>
-    <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a> (4 stars)</li>
-    <li><a target='_blank'  href='http://ptsteadman.github.io'>Tech
-        Notes</a> (2 stars)</li>
+    <li><a target='_blank'  href='http://github.com/ptsteadman/kaboodle'>Kaboodle, A DIY Ad Server</a></li>
+    <li><a target='_blank'  href='http://mrbots.net'>MR_BOTS, A Bot Creator</a></li>
+    <li><a target='_blank'  href='https://github.com/ptsteadman/baxter-teleoperation'>Teleoperation of the Baxter Industrial Robot</a></li>
+    <li><a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a></li>
+    <li><a target='_blank'  href='http://blog.newhive.com/theobot/'>Twitter Feed of My Google Searches</a></li>
+    <li><a target='_blank'  href='IMG_1772'>IMG_1772</a></li>
+    <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a></li>
+    <li><a target='_blank'  href='http://ptsteadman.github.io'>Tech Notes</a></li>
   </ul>
   <h2>Writing</h2>
   <ul>
-    <li><a target='_blank' href='https://github.com/ptsteadman/college-memoir'>College Memoir</a> (?
-    stars)</li>
-    <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a> (3
-    stars)</li>
-    <li><a target='_blank' href='poetry.html'>Poetry</a> (2 stars)</li>
-    <li><a target='_blank'
-        href='love-poem'>Love Poem (w/ E. Hatch)</a> (3 stars)</li>
+    <li><a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a></li>
+    <li><a target='_blank' href='https://github.com/ptsteadman/college-memoir'>College Memoir</a></li>
+    <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a></li>
+    <li><a target='_blank' href='poetry.html'>Poetry</a></li>
+    <li><a target='_blank' href='love-poem'>Love Poem (w/ E. Hatch)</a></li>
   </ul>
   <p><i>&nbsp;Last Updated: May 30th, 2015</i></p>
 </div>
