Remove ugly background image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 </style>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content="Website for Patrick Steadman's writing, programming, and game projects.">
+<meta name='description' content="This is the vanity website for Patrick Steadman's writing and programming projects.">
 <link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -22,27 +22,27 @@
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
   </ul>
   <p>This is my vanity website.</p> 
-  <img src="images/pts.jpg">
+  <img src="https://pbs.twimg.com/media/CXMbbknVAAMaFhG.jpg">
   <h2>Programming</h2>
   <ul>
+    <li><a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a></li>
     <li><a target='_blank'  href='http://github.com/ptsteadman/kaboodle'>Kaboodle, A DIY Ad Server</a></li>
-    <li><a target='_blank'  href='http://mrbots.net'>MR_BOTS, A Bot Creator</a></li>
-    <li><a target='_blank'  href='https://github.com/ptsteadman/baxter-teleoperation'>Teleoperation of the Baxter Industrial Robot</a></li>
+    <li><a target='_blank'  href='https://github.com/ptsteadman/baxter-teleoperation'>Baxter Industrial Robot Teleoperation</a></li>
     <li><a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a></li>
-    <li><a target='_blank'  href='http://blog.newhive.com/theobot/'>Twitter Feed of My Google Searches</a></li>
+    <li><a target='_blank'  href='http://blog.newhive.com/theobot/'>Google Search Twitter Feed</a></li>
+    <li><a target='_blank'  href='http://ptsteadman.github.io'>Technology Notes</a></li>
     <li><a target='_blank'  href='IMG_1772'>IMG_1772</a></li>
     <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a></li>
-    <li><a target='_blank'  href='http://ptsteadman.github.io'>Tech Notes</a></li>
   </ul>
   <h2>Writing</h2>
   <ul>
     <li><a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a></li>
     <li><a target='_blank' href='https://github.com/ptsteadman/college-memoir'>College Memoir</a></li>
     <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a></li>
-    <li><a target='_blank' href='poetry.html'>Poetry</a></li>
-    <li><a target='_blank' href='love-poem'>Love Poem (w/ E. Hatch)</a></li>
+    <li><a target='_blank' href='poetry.html'>Some Poetry</a></li>
+    <li><a target='_blank' href='love-poem'>Love Poem</a></li>
   </ul>
-  <p><i>&nbsp;Last Updated: May 30th, 2015</i></p>
+  <p><i>&nbsp;Last Updated: January 12th, 2016</i></p>
 </div>
 </body>
 <script>
@@ -56,3 +56,4 @@
 
 </script>
 </html>
+
