Remove link to memoir, edit taipei

--- a/taipei/index.html
+++ b/taipei/index.html
@@ -25,18 +25,16 @@ instantly that I was too much of a "pussy" to photograph other people.</p>
 <img src="img/entry.jpg">
 <br><br>
 <img src="img/desks.jpg">
-<p>Growing up in Buffalo, New York, I was surrounded by abandoned buildings,
-and some of my beautiful memories of high school involved exploring these
-factories, theaters, hospitals, train stations, offices, etc.</p> <p>In Buffalo,
-buildings were truly abandonded: no one owned them, or wanted to own them.  In
-Taipei, there were a large number of vacant postwar buildings, but most of them were
- in the process of being destroyed and redeveloped.
+<p>Growing up in Buffalo, New York, I explored many abandoned buildings,
+including factories, theaters, hospitals, train stations, and offices.</p>
+<p>In Taipei, there were a large number of vacant postwar buildings, but most
+of them were in the process of being destroyed and redeveloped, they were not
+truly abandoned.
 </p> 
 <p>
 These buildings had their own internal streets and breezeways, and seemed to
 reflect the more idealistic ambitions of the Republic of China in the early
-60s.  The apartments were usually filled with whatever the families had left
-behind, and had wall calendars from 2003, 2007, and 2009.</p>
+60s.  The apartments were usually had wall calendars from around 2003 to 2009.</p>
 <!--<img src="img/alley.jpg">-->
 <img src="img/inside-alley.jpg">
 <!-- interior shot -->
@@ -46,10 +44,10 @@ behind, and had wall calendars from 2003, 2007, and 2009.</p>
 <img src="img/portrait1.jpg">
 <br><br>
 <img src="img/portrait2.jpg">
-<p>The family portraits left behind were striking.</p>
+<br><br>
 <img src="img/art2.jpg">
-<p>I was hardly the only person to realize the fraught nature of some of these
-buildings.  I often stumbled on quite elaborate art projects and graffiti,
+<p>I was hardly the only person to realize the fraught nature of these
+buildings.  I often stumbled on elaborate art projects and graffiti,
 especially near arts colleges.</p>
 <img src="img/grand-hotel.jpg">
 <br><br>
@@ -58,18 +56,16 @@ especially near arts colleges.</p>
 enjoyed the isolation that the language barrier provided.  My distate for
 mangling the Chinese language gave me an excuse to simply spend most of my time
 wandering alone, looking for "things", or going over vocabularly and
-pronounciation with my doting host mother.  I think it was time well-spent,
-honestly.  </p>
+pronounciation with my doting host mother.   </p>
 <img src="img/aaron.jpg">
-<p>Sometimes I'd explore things with other exchange students.  One time, I convinced
-one of the French students to break away from the group to check out a
-half-finished seaside resort.  What would have been a massive glass-enclosed
-lobby was only steel beams, allowing the sound of waves to fill
-the echoing space.  Other parts of the building were almost complete: some
-bedrooms were decorated with plastic flowers; some doors and hallways opened to
-six story drops.  As we walked back along the beach, the French exchange student
-told me how attractive she found my normal exploration partner, another American
-student.</p>
+<p>Sometimes I'd explore things with other exchange students.  One time, I
+convinced one of the French students to break away from the group to check out
+a half-finished seaside resort.  What would have been a massive glass-enclosed
+lobby was only steel beams, opening over bright blue waves.  Other parts of
+the building were almost complete: some bedrooms were decorated with plastic
+flowers; some doors and hallways opened to six story drops.  As we walked back
+along the beach, the French exchange student told me how attractive she found
+my normal exploration partner, another American student.</p>
 <img src="img/taipei-roof.png">
 <br><br>
 <img src="img/cameras.jpg">
@@ -77,9 +73,9 @@ student.</p>
 <img src="img/train-1.jpg">
 <br><br>
 <img src="img/train-2.jpg">
-<p>The process of writing college applications harmed my mental health.  As my
-time in Taiwan drew to a close, my explorations became more compulsive and
-subterranean.</p>
+<p>The process of writing college applications was difficult for my mental
+health.  As my time in Taiwan drew to a close, my explorations became more
+compulsive and subterranean.</p>
 <img src="img/river-1.jpg">
 <br><br>
 <img src="img/river-2.jpg">
@@ -89,32 +85,28 @@ subterranean.</p>
 <img src="img/map.png">
 <!-- map -->
 <p>My biggest project was exploring a network of drainage tunnels I found under
-a a "cultural park".  After some exploration, I realized that the tunnels led to
-a five mile long underground river that cut under the center of Taipei.  I
-planned to buy an inflatable kayak and the paddle the length of the river.</p>
+a a "cultural park".  After a few explorations, I realized that the tunnels led
+to a five mile long underground river under the center of Taipei.  I planned to
+buy an inflatable kayak and the paddle the length of the river.</p>
 <img src="img/portal.jpg">
-<p>One of the more stressful aspects of this exploration was that the entrance
-to the tunnels was an access hatch in a busy public park.  Young couples often
-were sitting in the grass around the hatch, taking pictures of their children.</p>
+<br><br>
 <img src="img/scary.jpg">
 <br><br>
 <img src="img/hole.jpg">
 <p>I haven't looked at these pictures in almost five years, and I wonder if I'd
-still enjoy an exploration like this.  Would the red cockroaches covering the
-walls be more of a dealbreaker?   As an adult, if I really love drainage systems
-or factories, I can get a Masters of Engineering and work in them for
-a living.</p>
+still enjoy something like this.  Would the red cockroaches covering the walls
+be more of a dealbreaker?   As an adult, I could get a Masters of Engineering
+and work in drainage tunnels for a living, if I truly loved them.</p>
 <img src="img/stranger.jpg">
 <p>One time, when I was walking down a narrow passageway, I
-realized there was another light coming towards me. I thought it
+realized there was another light coming towards me.  I thought it
 might be own flashlight reflecting off something.  I turned my light off, and
 could see a person moving at the far end of the hallway.  I think he was
-shouting at me, but I couldn't tell what he was saying due to the sound of water.</p>
+shouting at me, but I couldn't tell what he was saying over the sound of the water.</p>
 <p>I felt intense dread.  Was this the police, down here looking for me?  Had I made
 a terrible mistake?  What would my parents say?  No one knew I was down in the
 tunnels.</p>
-<p>Ending the standoff,  I turned around and quickly walked away. (But not
-before I took a picture.)</p>
+<p>Ending the standoff, I took a picture, turned around, and quickly walked away. </p>
 <img src="img/mcd.jpg">
 <p>After a successful exploration, I usually ate McDonalds.  Living in Taiwan
 made me really appreciate McDonalds, where I could go even if drenched in
@@ -122,7 +114,6 @@ drainage water, eat a Big Mac, and listen to young Taiwanese businesspeople
 discuss their plans.</p>
 <p>I stopped doing these explorations a few years ago.  Why?   In Taiwan, and in
 Buffalo, I got caught a few times, but it was never a big deal. </p>
-
 <p> I think I'm mostly afraid of the embarassment of being an adult caught doing
 childish things.</p>
 <img src="img/selfie.jpg">
