Add college memoir

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </ul>
   <h2>Writing</h2>
   <ul>
+    <li><a target='_blank' href='http://collegememoir.com'>College Memoir</a></li>
     <li><a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a></li>
     <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a></li>
     <li><a target='_blank' href='poetry.html'>Some Poetry</a></li>
