Update modified date

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <li><a target='_blank' href='poetry.html'>Some Poetry</a></li>
     <li><a target='_blank' href='love-poem'>Love Poem</a></li>
   </ul>
-  <p><i>&nbsp;Last Updated: January 12th, 2016</i></p>
+  <p><i>&nbsp;Last Updated: March 1st, 2016</i></p>
 </div>
 </body>
 <script>
