Add link to computer lab

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <! DOCTYPE html>
 <html>
 <head>
-<title>Patrick Steadman's Personal Website</title>
-<style>
-</style>
+<title>Patrick Steadman</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content="This is the vanity website for Patrick Steadman's writing and programming projects.">
+<meta name='description' content="Patrick Steadman's writing and programming projects.">
 <link rel="author" href="https://plus.google.com/112533683849578002493">
 <link rel="stylesheet" href="theme.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -18,11 +16,12 @@
   <ul class='menu'>
     <li><a target='_blank' href='http://twitter.com/ptsteadman'>Twitter</a></li>
     <li><a target='_blank' href='http://www.facebook.com/ptsteadman'>Facebook</a></li>
-    <li><a target='_blank' href='http://github.com/ptsteadman'>Github</a></li>
+    <li><a target='_blank' href='http://github.com/ptsteadman'>GitHub</a></li>
     <li><a target='_blank' href='https://www.linkedin.com/profile/view?id=186210334'>LinkedIn</a></li>
   </ul>
-  <p>This is my vanity website.</p> 
+  <p>Welcome to my vanity website.</p> 
   <img src="https://pbs.twimg.com/media/CXMbbknVAAMaFhG.jpg">
+  <p>I'm currently working at <a href="http://computerlab.io">Computer Lab</a>.  I'd love to talk with you!</p>
   <h2>Programming</h2>
   <ul>
     <li><a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a></li>
@@ -42,7 +41,7 @@
     <li><a target='_blank' href='poetry.html'>Some Poetry</a></li>
     <li><a target='_blank' href='love-poem'>Love Poem</a></li>
   </ul>
-  <p><i>&nbsp;Last Updated: March 1st, 2016</i></p>
+  <p><i>&nbsp;Last Updated: April 6th, 2016</i></p>
 </div>
 </body>
 <script>
