--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </ul>
   <p>Welcome to my vanity website.</p> 
   <img src="https://pbs.twimg.com/media/CXMbbknVAAMaFhG.jpg">
-  <p>I'm currently working at <a href="http://computerlab.io">Computer Lab</a>.  I'd love to talk with you!</p>
+  <p>Current employment: <a href="http://computerlab.io">Computer Lab</a></p>
   <h2>Programming</h2>
   <ul>
     <li><a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a></li>
