Update with MDS

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   </ul>
   <h2>Writing</h2>
   <ul>
+    <li><a target='_blank' href='/millennial-deep-state/'>Millennial Deep State</a></li>
     <li><a target='_blank' href='http://collegememoir.com'>College Memoir</a></li>
     <li><a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a></li>
     <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a></li>
