--- a/millennial-deep-state/index.html
+++ b/millennial-deep-state/index.html
@@ -406,16 +406,6 @@ knowing it.</strong></p>
 </section>
   </div>
   <div class="slide hidden" id="slide-5">
-    <section class="slide-content"><h3 id="anatomy-of-the-boomer-deep-state">Anatomy of the Boomer Deep State</h3>
-<p><strong>The Baby Boomer Deep State</strong></p>
-<ul>
-<li>Three letter agencies: CIA, FBI, NSA, ONI</li>
-<li>Crime families and &#39;the Cabal&#39;: Gambino, Sinaloa, Dulles, Bush</li>
-<li>Military-Industrial: Manhattan Project, Area 51, Roswell</li>
-</ul>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-6">
     <section class="slide-content"><h3 id="deep-events">Deep Events</h3>
 <p><strong>&#39;Deep Events&#39;: the Footprints of the Deep State</strong></p>
 <ul>
@@ -426,11 +416,21 @@ financial control</li>
 </ul>
 </section>
   </div>
+  <div class="slide hidden" id="slide-6">
+    <section class="slide-content"><h3 id="anatomy-of-the-boomer-deep-state">Anatomy of the Boomer Deep State</h3>
+<p><strong>The Baby Boomer Deep State</strong></p>
+<ul>
+<li>Three letter agencies: CIA, FBI, NSA, ONI</li>
+<li>Crime families and &#39;the Cabal&#39;: Gambino, Sinaloa, Dulles, Bush</li>
+<li>Military-Industrial: Manhattan Project, Area 51, Roswell</li>
+</ul>
+</section>
+  </div>
   <div class="slide hidden" id="slide-7">
     <section class="slide-content"><h3 id="the-birth-of-the-millennial-deep-state">The Birth of the Millennial Deep State</h3>
-<p><strong> The Deep State in a post Cold War world </strong></p>
+<p><strong> The Deep State in a Post Cold War World </strong></p>
 <p>In the 90s, despite attempts at destabilizing the world with the Gulf War and
-Asian Financial crisis , <strong>the Cabal was losing control.</strong></p>
+Asian Financial crisis, <strong>the Cabal was losing control.</strong></p>
 <p>The Internet, originally funded by ARPA in the 1960s, was also becoming a
 problem.</p>
 </section>
@@ -482,8 +482,8 @@ discrediting honest startups, publicizing the Y2k &#39;bug&#39;...</p>
 power from &#39;the Cabal&#39;.</p>
 <p>Deep State technocrats transformed Arab extremists into a decentralized
 network of terror cells.</p>
-<p><strong>The War on Terror would require unprecendented information technology programs
-and the spectacle would create a desire for mass social media.</strong></p>
+<p><strong>The War on Terror would require unprecendented information technology programs.
+The spectacle would create a desire for mass social media.</strong></p>
 </section>
   </div>
   <div class="slide hidden" id="slide-14">
@@ -534,8 +534,8 @@ Who had the <strong>attention to detail</strong>?</p>
     <section class="slide-content"><h3 id="what-about-today-">What About Today?</h3>
 <p><strong> The Deep State is flexible and seductive. </strong></p>
 <p>Many ambitious young people make faustian deals with the Deep State in order to
-achieve success.</p>
-<p>Others are Deep State plants from birth.</p>
+<strong>achieve success</strong>.</p>
+<p>Others are Deep State &#39;plants&#39; from birth, born with privilege.</p>
 </section>
   </div>
   <div class="slide hidden" id="slide-21">
@@ -554,10 +554,10 @@ achieve success.</p>
   <div class="slide hidden" id="slide-23">
     <section class="slide-content"><h3 id="does-the-millennial-deep-state-kill-people-">Does the Millennial Deep State Kill People?</h3>
 <p><strong>Example: Michael Hastings</strong></p>
-<p>Covered Iraq War, Occupy Wall Street, PRISM.</p>
+<p>Wrote about Iraq War, Occupy Wall Street, PRISM.</p>
 <p>About 15 hours before dying in a fiery car crash at about 4:30 a.m. in L.A., he
 sent an email to several colleagues that said the FBI was investigating him and
-he was &quot;onto a big story.&quot;</p>
+he was <strong>&quot;onto a big story.&quot;</strong></p>
 </section>
   </div>
   <div class="slide hidden" id="slide-24">
