--- a/index.html
+++ b/index.html
@@ -24,25 +24,63 @@
   <p>Current employment: <a href="http://computerlab.io">Computer Lab</a></p>
   <h2>Programming</h2>
   <ul>
-    <li><a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a></li>
-    <li><a target='_blank'  href='http://github.com/ptsteadman/kaboodle'>Kaboodle, A DIY Ad Server</a></li>
-    <li><a target='_blank'  href='https://github.com/ptsteadman/baxter-teleoperation'>Baxter Industrial Robot Teleoperation</a></li>
-    <li><a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a></li>
-    <li><a target='_blank'  href='http://blog.newhive.com/theobot/'>Google Search Twitter Feed</a></li>
-    <li><a target='_blank'  href='http://ptsteadman.github.io'>Technology Notes</a></li>
-    <li><a target='_blank'  href='IMG_1772'>IMG_1772</a></li>
-    <li><a target='_blank'  href='memorial'>9/11 Pager Messages</a></li>
+    <li>
+      <a target='_blank'  href='http://github.com/ptsteadman/hexo-theme-corporate'>Hexo Corporate Theme</a>
+      <p>A theme that you can use to make your company seem legit.</p>
+    </li>
+    <li>
+      <a target='_blank'  href='http://github.com/ptsteadman/kaboodle'>Kaboodle, A DIY Ad Server</a>
+      <p>A script that puts fake ads on your site to make it look legit.</p>
+    </li>
+    <li>
+      <a target='_blank'  href='https://github.com/ptsteadman/baxter-teleoperation'>Baxter Industrial Robot Teleoperation</a>
+      <p>Python code that lets you control an industrial robot with your body.</p>
+    </li>
+    <li>
+      <a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a>
+      <p>A game that I helped make, it was hard.</p>
+    </li>
+    <li>
+      <a target='_blank'  href='http://blog.newhive.com/theobot/'>Google Search Twitter Feed</a>
+      <p>Since May 2015, all of my Google searches have been published in real time.</p>
+    </li>
+    <li>
+      <a target='_blank'  href='IMG_1772'>IMG_1772</a>
+      <p>A website for sharing videos with less than 100 views.</p>
+    </li>
+    <li>
+      <a target='_blank'  href='memorial'>9/11 Pager Messages</a>
+      <p>A 9/11 memorial that streams pager messages from that day in real time.</p>
+    </li>
   </ul>
   <h2>Writing</h2>
   <ul>
-    <li><a target='_blank' href='/millennial-deep-state/'>Millennial Deep State</a></li>
-    <li><a target='_blank' href='http://collegememoir.com'>College Memoir</a></li>
-    <li><a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a></li>
-    <li><a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a></li>
-    <li><a target='_blank' href='poetry.html'>Some Poetry</a></li>
-    <li><a target='_blank' href='love-poem'>Love Poem</a></li>
+    <li>
+      <a target='_blank' href='/millennial-deep-state/'>The Millennial Deep State</a>
+      <p>A presentation made at the Millennial Focus Group in April, 2016.</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://collegememoir.com'>College Memoir</a>
+      <p>A novella about the fantasy world of athletics, academics, and sex.</p>
+    </li>
+    <li>
+      <a target='_blank' href='http://beststoriesonline.com'>Best Stories Online</a>
+      <p>Shocking news, stories, thoughts, and videos.</p>
+    </li>
+    <li>
+      <a target='_blank' href='/taipei/index.html'>Tapei New Life Road</a>
+      <p>A photo essay about exploring drainage tunnels in Taipei.</p>
+    </li>
+    <li>
+      <a target='_blank' href='poetry.html'>Some Poetry</a>
+      <p>Poorly-versified poetry from 2012.</p>
+    </li>
+    <li>
+      <a target='_blank' href='love-poem'>Love Poem</a>
+      <p>An infinite, algorithmically generated 'love poem'.</p>
+    </li>
   </ul>
-  <p><i>&nbsp;Last Updated: April 6th, 2016</i></p>
+  <p><i>&nbsp;Last Updated: April 25th, 2016</i></p>
 </div>
 </body>
 <script>
