Update line height

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </li>
     <li>
       <a target='_blank'  href='https://www.youtube.com/watch?v=x3mOq_odFm0'>ARRAY 3D Game</a>
-      <p>A game that I helped make, it was hard.</p>
+      <p>A game that I helped make.</p>
     </li>
     <li>
       <a target='_blank'  href='http://blog.newhive.com/theobot/'>Google Search Twitter Feed</a>
